--- a/index.html
+++ b/index.html
@@ -4,7 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FOURLAB HUNTER RAINBOOT</title>
+
+    <!--추가 meta tag-->
+
+    <meta name="NaverBot" content="All" />
+    <meta name="NaverBot" content="index,follow" />
+    <meta name="Yeti" content="All" />
+    <meta name="Yeti" content="index,follow" />
+
+    <meta name="format-detection" content="telephone=no">
+    <meta name="viewport"
+        content="user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, width=device-width">
+    <meta name="robots" content="index, follow">
+    <meta name="title" content="FOURLAB">
+    <meta name="description" content="포시즌 컨셉의 라이프스타일 편집샵, 포랩.">
+    <meta name="keywords" content="포랩, 헌터, 레인부츠, 편집샵">
+
+    <meta property="og:type" content="article">
+    <meta property="og:title" content="FOURLAB">
+    <meta property="og:description" content="포시즌 컨셉의 라이프스타일 편집샵, 포랩.">
+    <meta property="og:url" content="https://lhyebin.github.io/project09_hunter/">
+    <meta property="og:image" content="https://lhyebin.github.io/project09_hunter/images/logo_b.jpg">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="FOURLAB">
+    <meta name="twitter:description" content="포시즌 컨셉의 라이프스타일 편집샵, 포랩.">
+    <meta name="twitter:url" content="https://lhyebin.github.io/project09_hunter/">
+    <meta name="twitter:image" content="https://lhyebin.github.io/project09_hunter/images/logo_b.jpg">
+    <!--//추가 meta tag-->
+
+
+
+    <title>FOURLAB</title>
+
+    <link rel="shortcut icon" href="./images/pabicon.png">
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/common.css">
@@ -28,11 +60,13 @@
                     </h1>
                 </div>
                 <div class="top_right">
-                    <ul>
+                    <ul class="login">
                         <li><a href="">Event</a></li>
                         <li><a href="">Review</a></li>
                         <li><a href="">Login</a></li>
                         <li><a href="">Join us</a></li>
+                    </ul>
+                    <ul class="icon">
                         <li><a href=""><i class="xi-search search"></i></a></li>
                         <li><a href=""><i class="xi-user user"></i></a></li>
                         <li><a href=""><i class="xi-cart cart"></i></a></li>
@@ -99,6 +133,9 @@
                         <li><a href="">Offline Store</a></li>
                     </ul>
                 </div>
+            </div>
+            <div class="mopen">
+                <i class="xi-bars"></i>
             </div>
         </div>
     </header>
@@ -180,9 +217,11 @@
         <section class="main_product">
             <div class="product_wrap">
                 <div class="product_tit">
-                    <h2>SHOP BY BOOT STYLE</h2>
-                    <p>스타일별 부츠 보기</p>
-                    <a href="">SHOW NOW <i class="xi-angle-right-min"></i></a>
+                    <div class="pro_tit">
+                        <h2>SHOP BY BOOT STYLE</h2>
+                        <p>스타일별 부츠 보기</p>
+                        <a href="">SHOW NOW <i class="xi-angle-right-min"></i></a>
+                    </div>
                     <div class="product_arrows">
                         <i class="xi-arrow-left left"></i>
                         <i class="xi-arrow-right right"></i>
@@ -306,6 +345,10 @@
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="content_mopen">
+                    <i class="xi-arrow-left left"></i>
+                    <i class="xi-arrow-right right"></i>
                 </div>
             </div>
         </section>
@@ -481,7 +524,7 @@
                     </ul>
                     <ul>
                         <li>통신판매업신고번호 : 2020-서울마포-0435</li>
-                        <li>주소 : 04056 에이동 4층, 서울특별시 마포구 신촌로4길 11 (동교동)</li>
+                        <li>주소 : 에이동 4층, 서울특별시 마포구 신촌로4길 11 (동교동)</li>
                     </ul>
                     <ul>
                         <li>개인정보관리책임자 : 박제희</li>
