--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="FOURLAB">
     <meta property="og:description" content="포시즌 컨셉의 라이프스타일 편집샵, 포랩.">
-    <meta property="og:url" content="https://lhyebin.github.io/project09_hunter/">
-    <meta property="og:image" content="https://lhyebin.github.io/project09_hunter/images/logo_b.jpg">
+    <meta property="og:url" content="https://lhyebin.github.io/FourLap/">
+    <meta property="og:image" content="	https://lhyebin.github.io/FourLap/images/logo_b.jpg">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="FOURLAB">
     <meta name="twitter:description" content="포시즌 컨셉의 라이프스타일 편집샵, 포랩.">
-    <meta name="twitter:url" content="https://lhyebin.github.io/project09_hunter/">
-    <meta name="twitter:image" content="https://lhyebin.github.io/project09_hunter/images/logo_b.jpg">
+    <meta name="twitter:url" content="https://lhyebin.github.io/FourLap/">
+    <meta name="twitter:image" content="https://lhyebin.github.io/FourLap/images/logo_b.jpg">
     <!--//추가 meta tag-->
 
 
